--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,42 @@
 [project]
 name = "bitcoin-analysis"
 version = "0.1.0"
-description = "Add your description here"
+description = "Bitcoin real-time data ingestion and analysis with logging regression"
 readme = "README.md"
 requires-python = ">=3.11"
+authors = [{name = "Mickael", email = "mickael.rakotoa@gmail.com"}]
+
 dependencies = [
-    "requests-html>=0.10.0",
-    "yahoo-fin>=0.8.9.1",
+    "requests>=2.31.0",           # HTTP requests (pour CoinGecko API)
+    "pandas>=2.1.0",              # Data manipulation
+    "python-dotenv>=1.0.0",       # Manage .env variables
+    "pytz>=2023.3",               # Timezone handling
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "black>=23.0.0",
+    "ruff>=0.1.0",
+]
+analytics = [
+    "scikit-learn>=1.3.0",
+    "numpy>=1.24.0",
+    "scipy>=1.11.0",
+]
+streamlit = [
+    "streamlit>=1.28.0",
+    "plotly>=5.17.0",
+]
+databricks = [
+    "databricks-sdk>=0.20.0",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+# Dit à hatchling où est le code
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
