--- a/dbx_raw_ingest/databricks.yml
+++ b/dbx_raw_ingest/databricks.yml
@@ -32,7 +32,7 @@ targets:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
     variables:
       catalog: dev
-      schema: dev
+      schema: bronze
   prod:
     mode: production
     workspace:
@@ -40,8 +40,8 @@ targets:
       # We explicitly deploy to /Workspace/Users/ggrftm@gmail.com to make sure we only have a single copy.
       root_path: /Workspace/Users/ggrftm@gmail.com/.bundle/${bundle.name}/${bundle.target}
     variables:
-      catalog: dev
-      schema: prod
+      catalog: prod
+      schema: bronze
     permissions:
       - user_name: ggrftm@gmail.com
         level: CAN_MANAGE
