--- a/dbx_raw_ingest/pyproject.toml
+++ b/dbx_raw_ingest/pyproject.toml
@@ -1,9 +1,20 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "dbx_raw_ingest"
+# "raw-ingest" pour matcher le job configuration
+name = "raw-ingest"
 version = "0.0.1"
-authors = [{ name = "ggrftm@gmail.com" }]
+description = "Bitcoin raw data ingestion and ETL pipeline"
+readme = "README.md"
 requires-python = ">=3.10,<3.13"
+authors = [
+    { name = "ggrftm@gmail.com" }
+]
+
 dependencies = [
+    "dotenv"
     # Any dependencies for jobs and pipelines in this project can be added here
     # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
     #
@@ -11,19 +22,30 @@ dependencies = [
     # add dependencies to the 'environment' section of your pipeline.yml file instead
 ]
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
     "pytest",
     "databricks-dlt",
     "databricks-connect>=15.4,<15.5",
 ]
 
-[project.scripts]
-main = "dbx_raw_ingest.main:main"
+# Le package est dans src/, pas à la racine
+[tool.hatch.build.targets.wheel]
+packages = ["src/raw_ingest"]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+# Pas de "src." au début du path
+[project.scripts]
+main = "raw_ingest.main:main"
 
 [tool.black]
 line-length = 125
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/tests",
+]
