clean and deployed to dbc prod

--- a/dbx_raw_ingest/pyproject.toml
+++ b/dbx_raw_ingest/pyproject.toml
@@ -14,12 +14,14 @@ authors = [
 ]
 
 dependencies = [
-    "dotenv"
+    "databricks-connect>=15.4.17",
     # Any dependencies for jobs and pipelines in this project can be added here
     # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
     #
     # LIMITATION: for pipelines, dependencies are cached during development;
     # add dependencies to the 'environment' section of your pipeline.yml file instead
+    "dotenv",
+    "pytest>=9.0.2",
 ]
 
 [project.optional-dependencies]
