--- a/dbx_raw_ingest/resources/raw_ingest_job.yml
+++ b/dbx_raw_ingest/resources/raw_ingest_job.yml
@@ -1,15 +1,13 @@
-# A sample job for raw_ingest.
+# A job for raw_ingest.
 
 resources:
   jobs:
-    sample_job:
-      name: sample_job
-
-      trigger:
-        # Run this job every day, exactly one day from the last run; see https://docs.databricks.com/api/workspace/jobs/create#trigger
-        periodic:
-          interval: 1
-          unit: DAYS
+    raw_ingest_job:
+      name: raw_ingest_job
+      schedule:
+        quartz_cron_expression: 6 0 3 * * ?
+        timezone_id: Europe/Paris
+        pause_status: UNPAUSED
 
       #email_notifications:
       #  on_failure:
@@ -22,12 +20,7 @@ resources:
           default: ${var.schema}
 
       tasks:
-        - task_key: notebook_task
-          notebook_task:
-            notebook_path: ../src/sample_notebook.ipynb
-        - task_key: python_wheel_task
-          depends_on:
-            - task_key: notebook_task
+        - task_key: raw_ingest_crypto
           python_wheel_task:
             package_name: raw_ingest
             entry_point: main
@@ -37,18 +30,13 @@ resources:
               - "--schema"
               - "${var.schema}"
           environment_key: default
-        - task_key: refresh_pipeline
-          depends_on:
-            - task_key: notebook_task
-          pipeline_task:
-            pipeline_id: ${resources.pipelines.dbx_raw_ingest_etl.id}
 
       environments:
         - environment_key: default
           spec:
             environment_version: "4"
             dependencies:
-              # By default we just include the .whl file generated for the raw_ingest package.
+              # By default, we just include the .whl file generated for the raw_ingest package.
               # See https://docs.databricks.com/dev-tools/bundles/library-dependencies.html
               # for more information on how to add other libraries.
               - ../dist/*.whl
