--- a/dbx_raw_ingest/resources/raw_ingest_job.yml
+++ b/dbx_raw_ingest/resources/raw_ingest_job.yml
@@ -7,7 +7,7 @@ resources:
       schedule:
         quartz_cron_expression: 6 0 3 * * ?
         timezone_id: Europe/Paris
-        pause_status: UNPAUSED
+        pause_status: ${var.pauseStatus}
 
       #email_notifications:
       #  on_failure:
