--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# txt file
+requirements.txt
+
+# markdown
+/markdown
+
+# idea
+.idea
+
+# data
+data
+test
