--- a/dbx_raw_ingest/pyproject.toml
+++ b/dbx_raw_ingest/pyproject.toml
@@ -15,6 +15,7 @@ authors = [
 
 dependencies = [
     "databricks>=0.2",
+    "databricks-cli>=0.18.0",
     "databricks-connect>=15.4.17",
     # Any dependencies for jobs and pipelines in this project can be added here
     # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
