--- a/dbx_raw_ingest/requirements.txt
+++ b/dbx_raw_ingest/requirements.txt
@@ -4,9 +4,15 @@ certifi==2026.1.4
     # via requests
 charset-normalizer==3.4.4
     # via requests
+click==8.3.1
+    # via databricks-cli
 colorama==0.4.6
-    # via pytest
+    # via
+    #   click
+    #   pytest
 databricks==0.2
+    # via raw-ingest (pyproject.toml)
+databricks-cli==0.18.0
     # via raw-ingest (pyproject.toml)
 databricks-connect==15.4.17
     # via raw-ingest (pyproject.toml)
@@ -34,6 +40,8 @@ numpy==1.26.4
     # via
     #   databricks-connect
     #   pandas
+oauthlib==3.3.1
+    # via databricks-cli
 packaging==25.0
     # via
     #   databricks-connect
@@ -59,6 +67,8 @@ pyasn1-modules==0.4.2
     # via google-auth
 pygments==2.19.2
     # via pytest
+pyjwt==2.10.1
+    # via databricks-cli
 pytest==9.0.2
     # via raw-ingest (pyproject.toml)
 python-dateutil==2.9.0.post0
@@ -68,18 +78,25 @@ python-dotenv==1.2.1
 pytz==2025.2
     # via pandas
 requests==2.32.5
-    # via databricks-sdk
+    # via
+    #   databricks-cli
+    #   databricks-sdk
 rsa==4.9.1
     # via google-auth
 setuptools==80.9.0
     # via databricks-connect
 six==1.17.0
     # via
+    #   databricks-cli
     #   databricks-connect
     #   python-dateutil
+tabulate==0.9.0
+    # via databricks-cli
 typing-extensions==4.15.0
     # via grpcio
 tzdata==2025.3
     # via pandas
 urllib3==2.6.3
-    # via requests
+    # via
+    #   databricks-cli
+    #   requests
