--- a/dbx_raw_ingest/databricks.yml
+++ b/dbx_raw_ingest/databricks.yml
@@ -39,11 +39,10 @@ targets:
     mode: production
     workspace:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
-      # We explicitly deploy to /Workspace/Users/ggrftm@gmail.com to make sure we only have a single copy.
-      root_path: /Workspace/Users/ggrftm@gmail.com/.bundle/PROD/${bundle.name}/${bundle.target}
+      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/PROD/${bundle.name}/${bundle.target}
     variables:
       catalog: prod
       schema: bronze
     permissions:
-      - user_name: ggrftm@gmail.com
+      - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
