--- a/dbx_workflow/databricks.yml
+++ b/dbx_workflow/databricks.yml
@@ -1,7 +1,7 @@
-# This is a Databricks asset bundle definition for raw_ingest.
+# This is a Databricks asset bundle definition for master_orchestrator_job.
 # See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
-  name: orchestrator_job
+  name: master_orchestrator_job
   uuid: 5a000346-9b36-4da2-acf8-1833b2f56a85
 
 include:
@@ -36,6 +36,7 @@ targets:
     variables:
       catalog: dev
       schema: bronze
+      pauseStatus: PAUSED
   prod:
     mode: production
     workspace:
@@ -44,6 +45,7 @@ targets:
     variables:
       catalog: prod
       schema: bronze
+      pauseStatus: UNPAUSED
     permissions:
       - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
