--- a/dbx_workflow/databricks.yml
+++ b/dbx_workflow/databricks.yml
@@ -22,6 +22,9 @@ variables:
   pauseStatus:
     description: Pause status for schedule 'PAUSED/UNPAUSED'
     default: PAUSED
+  root_path:
+    description: Root path in development/production workspace
+    default: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
 
 targets:
   dev:
@@ -33,6 +36,7 @@ targets:
     default: true
     workspace:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
+      root_path: ${var.root_path}
     variables:
       catalog: dev
       schema: bronze
@@ -41,7 +45,7 @@ targets:
     mode: production
     workspace:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
-      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
+      root_path: ${var.root_path}
     variables:
       catalog: prod
       schema: bronze
