--- a/dbx_workflow/resources/master_orchestrator_job.yml
+++ b/dbx_workflow/resources/master_orchestrator_job.yml
@@ -13,12 +13,6 @@ resources:
       #  on_failure:
       #    - your_email@example.com
 
-      parameters:
-        - name: catalog
-          default: ${var.catalog}
-        - name: schema
-          default: ${var.schema}
-
       tasks:
         - task_key: raw_ingest_crypto
           python_wheel_task:
@@ -30,10 +24,6 @@ resources:
               - "--schema"
               - "${var.schema}"
           environment_key: default
-          spec:
-            environment_version: "4"
-            dependencies:
-              - ../dist/*.whl
 
         - task_key: dbt_silver_gold
           depends_on:
@@ -42,17 +32,36 @@ resources:
             project_directory: dbt_silver_gold
             commands:
               - dbt run -s models/silver
-            schema: dlh_silver__crypto_prices
+            schema: ${var.schema}
             warehouse_id: 4ec8ed922861dd83
             catalog: ${var.catalog}
             source: GIT
           environment_key: dbt-default
+
+      git_source:
+        git_url: https://github.com/DOX69/Bitcoin-analysis
+        git_provider: gitHub
+        git_branch: dbt-engine
+
+      queue:
+        enabled: true
+
+      parameters:
+        - name: catalog
+          default: ${var.catalog}
+        - name: schema
+          default: ${var.schema}
+
+      environments:
+        - environment_key: default
+          spec:
+              dependencies:
+                - ${var.root_path}/artifacts/.internal/raw_ingest-0.0.1-py3-none-any.whl
+              environment_version: "4"
+        - environment_key: dbt-default
           spec:
             dependencies:
               - dbt-databricks>=1.0.0,<2.0.0
             environment_version: "4"
-          git_source:
-            git_url: https://github.com/DOX69/Bitcoin-analysis
-            git_provider: gitHub
-            git_branch: dbt-engine
+
       performance_target: PERFORMANCE_OPTIMIZED
