--- a/dbx_workflow/resources/master_orchestrator_job.yml
+++ b/dbx_workflow/resources/master_orchestrator_job.yml
@@ -41,7 +41,7 @@ resources:
       git_source:
         git_url: https://github.com/DOX69/Bitcoin-analysis
         git_provider: gitHub
-        git_branch: dbt-engine
+        git_branch: main
 
       queue:
         enabled: true
