--- a/dbx_workflow/databricks.yml
+++ b/dbx_workflow/databricks.yml
@@ -1,7 +1,7 @@
-# This is a Databricks asset bundle definition for raw_ingest.
+# This is a Databricks asset bundle definition for master_orchestrator_job.
 # See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
-  name: raw_ingest
+  name: master_orchestrator_job
   uuid: 5a000346-9b36-4da2-acf8-1833b2f56a85
 
 include:
@@ -21,6 +21,10 @@ variables:
     description: The schema to use
   pauseStatus:
     description: Pause status for schedule 'PAUSED/UNPAUSED'
+    default: PAUSED
+  root_path:
+    description: Root path in development/production workspace
+    default: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
 
 targets:
   dev:
@@ -32,17 +36,20 @@ targets:
     default: true
     workspace:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
+      root_path: ${var.root_path}
     variables:
       catalog: dev
       schema: bronze
+      pauseStatus: PAUSED
   prod:
     mode: production
     workspace:
       host: https://dbc-00120f69-4aad.cloud.databricks.com
-      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/PROD/${bundle.name}/${bundle.target}
+      root_path: ${var.root_path}
     variables:
       catalog: prod
       schema: bronze
+      pauseStatus: UNPAUSED
     permissions:
       - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
