enable deploy on main

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "git": {
         "deploymentEnabled": {
             "feature/create-web-app": true,
-            "main": false
+            "main": true
         }
     }
 }
