--- a/dbt_silver_gold/models/silver/crypto_prices/properties.yml
+++ b/dbt_silver_gold/models/silver/crypto_prices/properties.yml
@@ -8,6 +8,58 @@ models:
         data_tests:
           - unique
           - not_null
+      - name: low_usd
+        description: "Lowest price in USD"
+        data_tests:
+          - positive_value
+      - name: high_usd
+        description: "Highest price in USD"
+        data_tests:
+          - positive_value
+      - name: open_usd
+        description: "Opening price in USD"
+        data_tests:
+          - positive_value
+      - name: close_usd
+        description: "Closing price in USD"
+        data_tests:
+          - not_null
+          - positive_value
+      - name: volume
+        description: "Trading volume"
+        data_tests:
+          - not_null
+      - name: rsi
+        description: "Relative Strength Index (RSI)"
+        data_tests:
+          - percentage_range
+      - name: rsi_status
+        description: "RSI Status (e.g., Overbought, Oversold)"
+      - name: rate_usd_chf
+        description: "Exchange rate from USD to CHF"
+      - name: rate_usd_eur
+        description: "Exchange rate from USD to EUR"
+      - name: low_chf
+        description: "Lowest price in CHF"
+      - name: high_chf
+        description: "Highest price in CHF"
+      - name: open_chf
+        description: "Opening price in CHF"
+      - name: close_chf
+        description: "Closing price in CHF"
+      - name: low_eur
+        description: "Lowest price in EUR"
+      - name: high_eur
+        description: "Highest price in EUR"
+      - name: open_eur
+        description: "Opening price in EUR"
+      - name: close_eur
+        description: "Closing price in EUR"
+      - name: ingest_date_time
+        description: "Timestamp of ingestion"
+      - name: dbt_batch_id
+        description: "Batch ID of the dbt run"
+
   - name: obt_fact_day_eth
     description: "Daily eth prices in usd, chf, eur"
     columns:
@@ -17,3 +69,54 @@ models:
         data_tests:
           - unique
           - not_null
+      - name: low_usd
+        description: "Lowest price in USD"
+        data_tests:
+          - positive_value
+      - name: high_usd
+        description: "Highest price in USD"
+        data_tests:
+          - positive_value
+      - name: open_usd
+        description: "Opening price in USD"
+        data_tests:
+          - positive_value
+      - name: close_usd
+        description: "Closing price in USD"
+        data_tests:
+          - not_null
+          - positive_value
+      - name: volume
+        description: "Trading volume"
+        data_tests:
+          - not_null
+      - name: rsi
+        description: "Relative Strength Index (RSI)"
+        data_tests:
+          - percentage_range
+      - name: rsi_status
+        description: "RSI Status (e.g., Overbought, Oversold)"
+      - name: rate_usd_chf
+        description: "Exchange rate from USD to CHF"
+      - name: rate_usd_eur
+        description: "Exchange rate from USD to EUR"
+      - name: low_chf
+        description: "Lowest price in CHF"
+      - name: high_chf
+        description: "Highest price in CHF"
+      - name: open_chf
+        description: "Opening price in CHF"
+      - name: close_chf
+        description: "Closing price in CHF"
+      - name: low_eur
+        description: "Lowest price in EUR"
+      - name: high_eur
+        description: "Highest price in EUR"
+      - name: open_eur
+        description: "Opening price in EUR"
+      - name: close_eur
+        description: "Closing price in EUR"
+      - name: ingest_date_time
+        description: "Timestamp of ingestion"
+      - name: dbt_batch_id
+        description: "Batch ID of the dbt run"
