--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: Install dependencies
-        run: |
-          pip install uv
-          uv sync --extra dev
+        run: uv sync --extra dev
 
       - name: Run Backend Tests
         env:
@@ -77,7 +77,7 @@ jobs:
       - uses: databricks/setup-cli@main
 
       - name: 📦 Install uv
-        run: pip install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: 🔑 Configure Databricks CLI
         run: |
