chore: fix daily api schema check and update models
- Add `genson` dependency for dynamic schema generation
- Update `check_api_schemas.py` to correctly handle Frankfurter dynamic keys
- Update workflow runner to ubuntu-22.04
- Regenerate API models

--- a/dbx_workflow/pyproject.toml
+++ b/dbx_workflow/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "databricks-dlt",
     "databricks-connect>=15.4,<15.5",
     "datamodel-code-generator[http]>=0.25.0",
+    "genson>=1.2.0",
 ]
 
 # Le package est dans src/, pas à la racine
