--- a/dbx_workflow/pyproject.toml
+++ b/dbx_workflow/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest>=9.0.2",
     "pydantic>=2.0.0",
     "requests>=2.0.0",
+    "genson[dev]>=1.3.0",
 ]
 
 [project.optional-dependencies]
